deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
      - name: blog
        image: ghcr.io/desecho/blog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
