deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: blog
